--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <title>My first three.js app</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <h1>TryingThreeJS</h1>
-    <p>Hello world</p>
+    <script type="module" src="/src/main.ts"></script>
   </body>
-
-  <script type="module" src="/src/main.ts"></script>
 </html>
